--- a/shop.css
+++ b/shop.css
@@ -1,5 +1,8 @@
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+  @import url('https://fonts.cdnfonts.com/css/pirulen');
+
 *{
-    font-family: montserrat thin;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
     scroll-padding-top: 2rem;
@@ -24,7 +27,7 @@ body{
     z-index: 100;
 }
 .logo h1{
-    font-family: pirulen;
+    font-family: 'Pirulen Rg', sans-serif;
     cursor: default;
 }
 
@@ -85,7 +88,7 @@ body{
 }
 .menu li a{
     color: black;
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
 }
 .menu .menuItems a:after {
@@ -367,7 +370,7 @@ section{
 }
 .section-title{
     font-size: 2rem;
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     text-align: center;
     color:  black;
@@ -471,7 +474,7 @@ section{
 }
 .blog h1{
     text-align: center;
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
     font-weight: 600;
 }
@@ -535,7 +538,7 @@ section{
     background-color: #000000;
 }
 .footer h2{
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;    
     letter-spacing: 2px;
 }
 .footer div{
@@ -556,7 +559,7 @@ section{
 }
 
 .main h1{
-    font-family: pirulen;
+    font-family: 'Pirulen Rg', sans-serif;
 }
 .main .socialIcons{
     display: flex;
